Major updates * Support for building, packaging and running examples w/ OpenJDK 11 * Update wrapper to Gradle 4.10.2 * Add JavaAssist 3.24.0-rc lib as a stopgap until GA release; in support of OpenJDK 11 * Upgrade to Spring Boot 2.0.6.RELEASE * Upgrade other third-party dependencies and plugins